# building3d

./: .gitignore  LICENSE  Makefile  README.md  example.py  example_1.py  example_2.py  mesh_generation_time.csv  pyproject.toml
.github/workflows/: python-app.yml  unit_tests.yml
building3d/: __init__.py  config.py
building3d/_to_be_ported/: README.md
examples/: README.md  _checklist.md  array_format_example.py  auralize_1_box.py  auralize_3_boxes.py  benchmark_mesh.py  benchmark_mesh_plot.py  building_example.py  dotbim.py  example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6_ray_sim.py  example_6_rays.py  example_7_parallel_ray_sim.py  example_7_ray_sim.py  floor_plan.py  floor_plan_example.py  io.py  partition_plan.py  polygon.py  polygon_example.py  polygon_hole.py  ray_2_boxes.py  ray_2_boxes_example.py  ray_3_boxes.py  ray_cylinder.py  ray_cylinder_example.py  ray_example.py  ray_numba_example.py  ray_parallel_example.py  ray_sphere.py  ray_sphere_example.py  ray_teapot.py  ray_teapot_example.py  read_stl.py  read_teapot.py  read_write_dotbim.py  (+7 more)
resources/: README.md  cylinder.stl  sphere.stl  utah_teapot.stl
test/: test_point.py  test_polygon.py  test_solid.py  test_space.py  test_vector.py  test_verify.py  test_wall.py  test_zone.py
tests/: test_b3d.py  test_box.py  test_building.py  test_cloud.py  test_collapse_points.py  test_constr_delaunay_tri.py  test_constr_triangulation.py  test_delaunay_tetrahedralization.py  test_delaunay_triangulation.py  test_dotbim.py  test_find_neighbors.py  test_floor_plan.py  test_geom_paths.py  test_hole_polygon.py  test_imprint_polygon.py  test_init.py  test_line.py  test_mesh.py  test_mesh_collapse_points.py  test_mesh_fix_short_edges.py  test_mesh_l_shape.py  test_mesh_polygon.py  test_mesh_quality_collapse_points.py  test_mesh_quality_purge_mesh.py  test_mesh_solid.py  test_mesh_stats.py  test_partition_plan.py  test_plane.py  test_plot_mesh.py  test_plot_solid.py  test_plot_zone.py  test_point.py  test_polygon.py  test_polymesh_collapse_points.py  test_polymesh_fix_short_edges.py  test_polymesh_l_shape.py  test_predefined_walls.py  test_random_within.py  test_rotate.py  test_solid.py  (+13 more)
(+358 files in other folders)
