[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "building3d"
authors = [
    {name = "Krzysztof Arendt", email = "16005748+krzysztofarendt@users.noreply.github.com"},
]
description = "Towards 3D building physics modeling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "mayavi",
    "PyQt5"
]
version = "0.0.1"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "isort", "twine", "build"]

[project.scripts]
building3d = "building3d:main"
