[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "building3d"
authors = [
    {name = "Krzysztof Arendt", email = "16005748+krzysztofarendt@users.noreply.github.com"},
]
description = "Towards 3D building physics modeling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "numpy",
    "numba",
    "pandas",
    "scipy",
    # File export
    "dotbimpy",
    # Visualization
    "matplotlib",
    "pyvista[all,trame]",
    "imageio[ffmpeg]",
    "jupyterlab",
    "ipywidgets",
    # Other
    "tqdm",
]
version = "0.0.4"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "isort", "flake8", "twine", "build"]

[tool.setuptools]
packages = ["building3d"]

[project.scripts]
building3d = "building3d:main"
